# ppvid

./: README.md  pyproject.toml  requirements.txt
ppvid/: cli.py  utilities.py
tests/: test_ppvid.py
